# DepWord2vec

./: CMakeLists.txt  README.md  default_config.json  default_dep2vec_config.json  default_word2vec_config.json
src/: CMakeLists.txt  SkgNeg.cpp  SkgNeg.h  Vocab.cpp  Vocab.h  Word.cpp  Word.h  main.cpp
src/dep2vec/: CMakeLists.txt  DepSkgNeg.cpp  DepTree.cpp  Vocab.cpp  main.cpp
src/dep2vec/include/: DepSkgNeg.h  DepTree.h  Vocab.h
src/include/: SkgNeg.h
src/word2vec/: CMakeLists.txt  SkgNeg.cpp  main.cpp
src/word2vec/include/: SkgNeg.h
